--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@svgr/cli": "^8.1.0",
     "bootstrap": "^5.3.3",
+    "google-map-react": "^2.2.1",
     "next": "^14.2.14",
     "next-intl": "^3.20.0",
     "next-themes": "^0.3.0",
